--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "dieschittigs/contao-recaptcha",
+    "description": "Contao 4 Bundle that replaces the default Contao captcha with Google's invisible reCAPTCHA or reCAPTCHA 2.0",
     "type": "contao-bundle",
     "license": "ISC",
     "authors": [
@@ -8,6 +9,10 @@
             "email": "christopher@dieschittigs.de"
         }
     ],
+    "require": {
+        "php": ">=5.6",
+        "contao/core-bundle": "^4.0"
+    },
     "autoload": {
         "psr-4": {
             "DieSchittigs\\RecaptchaBundle\\": "src/"
